<resources>
    <string name="app_name">Weather Application</string>
    <string name="weather">Weather in your city</string>
    <string name="on_create">onCreate</string>
    <string name="on_start">onStart</string>
    <string name="on_restore_instance_state">onRestoreInstanceState</string>
    <string name="on_resume">onResume</string>
    <string name="on_pause">onPause</string>
    <string name="on_save_instance_state">onSaveInstanceState</string>
    <string name="on_stop">onStop</string>
    <string name="on_restart">onRestart</string>
    <string name="on_destroy">onDestroy</string>
    <string name="first_start">First start</string>
    <string name="second_start">Second start</string>
    <string name="tag_for_logcat">WeatherApp</string>
    <string name="temperature">Temperature</string>
    <string name="humidity">Humidity</string>
    <string name="pressure">Pressure</string>
    <string name="visibility">Visibility</string>
    <string name="wind">Wind</string>
    <string name="city">Saint-Petersburg</string>
    <string name="write_your_city">Write your city</string>
    <string name="show">Show</string>
    <string name="android_image_descr">android</string>
    <string name="empty">empty</string>
    <array name="Cities">
        <item>Saint-Petersburg</item>
        <item>Moscow</item>
        <item>New York</item>
        <item>London</item>
    </array>
</resources>

